Add a script tag & circles for each slide

--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="./style.css">
+        <script src="./script.js" defer></script>
     </head>
 
     <body>
         <div class="container">
-            <div class="img1"><img src="./img/image-one.png" alt="image one"></div>
-            <div class="img2"><img src="/img/image-two.png" alt="image two"></div>
-            <div class="img3"><img src="./img/image-three.png" alt="image three"></div>
-            <div class="img4"><img src="./img/image-four.png" alt="image four"></div>
-            <div class="img5"><img src="./img/image-five.png" alt="image five"></div>
+            <div class="img1 slides"><img src="./img/image-one.png" alt="image one"></div>
+            <div class="img2 slides"><img src="/img/image-two.png" alt="image two"></div>
+            <div class="img3 slides"><img src="./img/image-three.png" alt="image three"></div>
+            <div class="img4 slides"><img src="./img/image-four.png" alt="image four"></div>
+            <div class="img5 slides"><img src="./img/image-five.png" alt="image five"></div>
+            <a class="prev">&#10094;</a>
+            <a class="next">&#10095;</a>
+        </div>
+        <div class="circle-container">
+            <span class="circle"></span>
+            <span class="circle"></span>
+            <span class="circle"></span>
+            <span class="circle"></span>
+            <span class="circle"></span>
         </div>
     </body>
 
