--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Image Slider | Carousel</title>
         <link rel="stylesheet" href="./style.css">
         <script src="./script.js" defer></script>
     </head>
 
     <body>
         <div class="container">
-            <div class="img1 slides"><img src="./img/image-one.png" alt="image one"></div>
-            <div class="img2 slides"><img src="/img/image-two.png" alt="image two"></div>
-            <div class="img3 slides"><img src="./img/image-three.png" alt="image three"></div>
-            <div class="img4 slides"><img src="./img/image-four.png" alt="image four"></div>
-            <div class="img5 slides"><img src="./img/image-five.png" alt="image five"></div>
+            <div class="slides"><img src="./img/image-one.png" alt="image one"></div>
+            <div class="slides"><img src="/img/image-two.png" alt="image two"></div>
+            <div class="slides"><img src="./img/image-three.png" alt="image three"></div>
+            <div class="slides"><img src="./img/image-four.png" alt="image four"></div>
+            <div class="slides"><img src="./img/image-five.png" alt="image five"></div>
             <a class="prev">&#10094;</a>
             <a class="next">&#10095;</a>
         </div>
