--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
 
     <body>
+        <pre><h1>          Image
+            Slider          Carousel</h1></pre>
         <div class="container">
             <div class="slides"><img src="./img/image-one.png" alt="image one"></div>
             <div class="slides"><img src="/img/image-two.png" alt="image two"></div>
