Add a periodto target missing image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Slider          Carousel</h1></pre>
         <div class="container">
             <div class="slides"><img src="./img/image-one.png" alt="image one"></div>
-            <div class="slides"><img src="/img/image-two.png" alt="image two"></div>
+            <div class="slides"><img src="./img/image-two.png" alt="image two"></div>
             <div class="slides"><img src="./img/image-three.png" alt="image three"></div>
             <div class="slides"><img src="./img/image-four.png" alt="image four"></div>
             <div class="slides"><img src="./img/image-five.png" alt="image five"></div>
